syntax = "proto3";

package via.pro3.slaughterhouse;

option java_package = "com.slaughterhouse.grpc";
option java_outer_classname = "SlaughterhouseProto";
option java_multiple_files = true;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

// --- Entities ---

message Animal {
  int64 id = 1;
  string registration_number = 2;
  double weight = 3;
  google.protobuf.Timestamp arrival_time = 4;
}

message AnimalPart {
  int32 id = 1;
  int32 animal_id = 2;
  string part_type = 3;
  double weight = 4;
}

message Tray {
  int32 id = 1;
  string part_type = 2;
  double max_weight = 3;
}

message Product {
  int32 id = 1;
  string name = 2;
  string description = 3;
}

message ProductToPart {
  int32 id = 1;
  int32 product_id = 2;
  int32 part_id = 3;
  int32 quantity = 4;
}

// --- Common ---

message Error {
  int32 code = 1;
  string message = 2;
}

message GetByIdRequest {
  int32 id = 1;
}

message DeleteByIdRequest {
  int32 id = 1;
}

message DeleteResponse {
  Error error = 1;
}

// --- CRUD ---

message CreateAnimalRequest {
  Animal animal = 1;
}
message CreateAnimalResponse {
  Animal animal = 1;
  Error error = 2;
}
message ListAnimalsResponse {
  repeated Animal animals = 1;
}

message CreateAnimalPartRequest {
  AnimalPart part = 1;
}
message CreateAnimalPartResponse {
  AnimalPart part = 1;
  Error error = 2;
}
message ListAnimalPartsResponse {
  repeated AnimalPart parts = 1;
}

message CreateTrayRequest {
  Tray tray = 1;
}
message CreateTrayResponse {
  Tray tray = 1;
  Error error = 2;
}
message ListTraysResponse {
  repeated Tray trays = 1;
}

message CreateProductRequest {
  Product product = 1;
}
message CreateProductResponse {
  Product product = 1;
  Error error = 2;
}
message ListProductsResponse {
  repeated Product products = 1;
}

message CreateProductToPartRequest {
  ProductToPart mapping = 1;
}
message CreateProductToPartResponse {
  ProductToPart mapping = 1;
  Error error = 2;
}
message ListProductToPartResponse {
  repeated ProductToPart mappings = 1;
}

// --- Services ---

service AnimalService {
  rpc CreateAnimal(CreateAnimalRequest) returns (CreateAnimalResponse);
  rpc GetAnimal(GetByIdRequest) returns (Animal);
  rpc DeleteAnimal(DeleteByIdRequest) returns (DeleteResponse);
  rpc ListAnimals(google.protobuf.Empty) returns (ListAnimalsResponse);
}

service AnimalPartService {
  rpc CreateAnimalPart(CreateAnimalPartRequest) returns (CreateAnimalPartResponse);
  rpc GetAnimalPart(GetByIdRequest) returns (AnimalPart);
  rpc DeleteAnimalPart(DeleteByIdRequest) returns (DeleteResponse);
  rpc ListAnimalParts(google.protobuf.Empty) returns (ListAnimalPartsResponse);
}

service TrayService {
  rpc CreateTray(CreateTrayRequest) returns (CreateTrayResponse);
  rpc GetTray(GetByIdRequest) returns (Tray);
  rpc DeleteTray(DeleteByIdRequest) returns (DeleteResponse);
  rpc ListTrays(google.protobuf.Empty) returns (ListTraysResponse);
}

service ProductService {
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse);
  rpc GetProduct(GetByIdRequest) returns (Product);
  rpc DeleteProduct(DeleteByIdRequest) returns (DeleteResponse);
  rpc ListProducts(google.protobuf.Empty) returns (ListProductsResponse);
}

service ProductToPartService {
  rpc CreateProductToPart(CreateProductToPartRequest) returns (CreateProductToPartResponse);
  rpc GetProductToPart(GetByIdRequest) returns (ProductToPart);
  rpc DeleteProductToPart(DeleteByIdRequest) returns (DeleteResponse);
  rpc ListProductToPart(google.protobuf.Empty) returns (ListProductToPartResponse);
}
